[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dex-client-cmc-web"
version = "0.1.0"
description = "CoinMarketCap Web Reverse Client for browser-backed crypto market APIs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Research Client Maintainers" }]
dependencies = ["httpx>=0.27", "curl_cffi>=0.7"]
keywords = ["crypto", "dex", "reverse-engineered", "cmc_web"]
classifiers = ["Programming Language :: Python :: 3", "Typing :: Typed"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/bigidulka/dex-client-cmc-web"
Documentation = "https://bigidulka.github.io/dex-client-cmc-web/"
Repository = "https://github.com/bigidulka/dex-client-cmc-web"

[tool.hatch.build.targets.wheel]
packages = ["src/dex_client_cmc_web"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
